fix: resolve taskcard button wrapping issue

--- a/src/components/TaskCard/TaskCard.module.css
+++ b/src/components/TaskCard/TaskCard.module.css
@@ -48,6 +48,7 @@
 }
 .lower {
   display: flex;
+  align-items: center;
   text-transform: capitalize;
 }
 .lower > p > span {
@@ -55,6 +56,7 @@
 }
 .buttons {
   margin-left: auto;
+  min-width: 60px;
 }
 .buttons > button {
   background: none;
